Fix restoration of session after a crash.

Disable sending kTabModelNewTabWillOpenNotification notification
when the TabModel is restoring a session as this breaks the BVC
state that does not expect the notification to be sent when a tab
is added due to session restoration.

Bug: 763964
Change-Id: I404487b5a561e43fe4d23303c004e4d3e8701dfe
Reviewed-on: https://chromium-review.googlesource.com/664557
Reviewed-by: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501614}